--- a/src/app/go-over/components/go-over-view/go-over-view.component.html
+++ b/src/app/go-over/components/go-over-view/go-over-view.component.html
@@ -1,1 +1,130 @@
-<p>go-over-view works!</p>
+<div class="content">
+    <div class="row">
+        <div class="col">
+            <div class="card h-100">
+                <div class="card-header">                    
+                    <h4 id="header-card-go-over"><i class="fa-solid fa-book-bookmark mod-icon"></i>La Guía Scrum</h4>
+                </div>
+                <div class="card-body text-center">
+                    <p class="card-text">La Guía Definitiva de Scrum: Las Reglas del Juego</p>
+                    <a href="https://scrumguides.org/docs/scrumguide/v2020/2020-Scrum-Guide-Spanish-European.pdf" target="_blank"
+                     class="btn btn-success">Ver documento</a>
+                </div>
+                <div class="card-footer text-body-secondary">
+                    <span id="footer-card-go-over">Fecha de publicación: Noviembre 2020</span>
+                </div>
+            </div>
+        </div>
+        <div class="col">
+            <div class="card h-100">
+                <div class="card-header">                    
+                    <h4 id="header-card-go-over"><i class="fa-solid fa-book-bookmark mod-icon"></i>Todo Scrum 2021</h4>
+                </div>
+                <div class="card-body text-center">
+                    <p class="card-text">Un resumen para ser un Scrum Master</p>
+                    <a href="https://scrumguides.org/docs/scrumguide/v2020/2020-Scrum-Guide-Spanish-European.pdf" target="_blank"
+                     class="btn btn-success">Ver documento</a>
+                </div>
+                <div class="card-footer text-body-secondary">
+                    <span id="footer-card-go-over">Fecha de publicación: 2021</span>
+                </div>
+            </div>
+        </div>
+        <div class="col">
+            <div class="card h-100">
+                <div class="card-header">                    
+                    <h4 id="header-card-go-over"><i class="fa-solid fa-book-bookmark mod-icon"></i>Scrum Master</h4>
+                </div>
+                <div class="card-body text-center">
+                    <p class="card-text">Temario troncal 1 Versión 3</p>
+                    <a href="https://scrumguides.org/docs/scrumguide/v2020/2020-Scrum-Guide-Spanish-European.pdf" target="_blank"
+                     class="btn btn-success">Ver documento</a>
+                </div>
+                <div class="card-footer text-body-secondary">
+                    <span id="footer-card-go-over">Fecha de publicación: febrero 2022</span>
+                </div>
+            </div>
+        </div>
+        <div class="col">
+            <div class="card h-100">
+                <div class="card-header">                    
+                    <h4 id="header-card-go-over"><i class="fa-solid fa-book-bookmark mod-icon"></i>Una Introducción a
+                        Scrum</h4>
+                </div>
+                <div class="card-body text-center">
+                    <p class="card-text">Estamos perdiendo la carrera de
+                        relevos</p>
+                    <a href="https://scrumguides.org/docs/scrumguide/v2020/2020-Scrum-Guide-Spanish-European.pdf" target="_blank"
+                     class="btn btn-success">Ver documento</a>
+                </div>
+                <div class="card-footer text-body-secondary">
+                    <span id="footer-card-go-over">Fecha de publicación: Noviembre 2013</span>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="row mt-5">
+        <div class="col">
+            <div class="card h-100">
+                <div class="card-header">                    
+                    <h4 id="header-card-go-over"><i class="fa-solid fa-book-bookmark mod-icon"></i>Scrum Manager</h4>
+                </div>
+                <div class="card-body text-center">
+                    <p class="card-text">Guía de formación Versión 2.6</p>
+                    <a href="https://scrumguides.org/docs/scrumguide/v2020/2020-Scrum-Guide-Spanish-European.pdf" target="_blank"
+                     class="btn btn-success">Ver documento</a>
+                </div>
+                <div class="card-footer text-body-secondary">
+                    <span id="footer-card-go-over">Fecha de publicación: Julio 2016</span>
+                </div>
+            </div>
+        </div>
+        <div class="col">
+            <div class="card h-100">
+                <div class="card-header">                    
+                    <h4 id="header-card-go-over"><i class="fa-solid fa-book-bookmark mod-icon"></i>Estudio de metodologías ágiles</h4>
+                </div>
+                <div class="card-body text-center">
+                    <p class="card-text">Aplicacion de estudio SCRUM</p>
+                    <a href="https://scrumguides.org/docs/scrumguide/v2020/2020-Scrum-Guide-Spanish-European.pdf" target="_blank"
+                     class="btn btn-success">Ver documento</a>
+                </div>
+                <div class="card-footer text-body-secondary">
+                    <span id="footer-card-go-over">Fecha de publicación: 2019</span>
+                </div>
+            </div>
+        </div>
+        <div class="col">
+            <div class="card h-100">
+                <div class="card-header">                    
+                    <h4 id="header-card-go-over"><i class="fa-solid fa-book-bookmark mod-icon"></i>Scrum</h4>
+                </div>
+                <div class="card-body text-center">
+                    <p class="card-text">El revolucionario método para trabajar
+                        el doble en la mitad de tiempo</p>
+                    <a href="https://scrumguides.org/docs/scrumguide/v2020/2020-Scrum-Guide-Spanish-European.pdf" target="_blank"
+                     class="btn btn-success">Ver documento</a>
+                </div>
+                <div class="card-footer text-body-secondary">
+                    <span id="footer-card-go-over">Fecha de publicación: octubre 2018</span>
+                </div>
+            </div>
+        </div>
+        <div class="col">
+            <div class="card h-100">
+                <div class="card-header">                    
+                    <h4 id="header-card-go-over"><i class="fa-solid fa-book-bookmark mod-icon"></i>Metodologías
+                        de Gestión de Proyectos</h4>
+                </div>
+                <div class="card-body text-center">
+                    <p class="card-text">Modelo agile</p>
+                    <a href="https://scrumguides.org/docs/scrumguide/v2020/2020-Scrum-Guide-Spanish-European.pdf" target="_blank"
+                     class="btn btn-success">Ver documento</a>
+                </div>
+                <div class="card-footer text-body-secondary">
+                    <span id="footer-card-go-over">Fecha de publicación: 2018</span>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
