--- a/src/app/shared/components/achievements/achievements.component.html
+++ b/src/app/shared/components/achievements/achievements.component.html
@@ -1,13 +1,33 @@
-<ul class="list-group mod list-group-flush">
-    <li class="list-group-item">
-        Logro1
+<ul class="list-group mod list-group-flush" style="background-color: transparent;" #listAchievements>
+    <li class="list-group-item" [ariaDisabled]='logroSuccess'>
+
+        Listo para solucionar agilmente
+        <p [attr.hidden]='logroSuccess'>Conseguido</p>
+
+
     </li>
-    <li class="list-group-item">Logro2</li>
-    <li class="list-group-item">Logro3</li>
-    <li class="list-group-item">Logro4</li>
-    <li class="list-group-item">Logro5</li>
-    <li class="list-group-item">Logro6</li>
-    <li class="list-group-item">Logro7</li>
-    <li class="list-group-item">Logro8</li>
-    <li class="list-group-item">Logro9</li>
+    <li class="list-group-item" [ariaDisabled]='logroSuccess'>¿Con cual me quedo?
+        <p [attr.hidden]='logroSuccess'>Conseguido</p>
+    </li>
+    <li class="list-group-item" [ariaDisabled]='logroSuccess'>Decision tomada!!
+        <p [attr.hidden]='logroSuccess'>Conseguido</p>
+    </li>
+    <li class="list-group-item" [ariaDisabled]='logroSuccess'>Conociendo a scrummie
+        <p [attr.hidden]='logroSuccess'>Conseguido</p>
+    </li>
+    <li class="list-group-item" [ariaDisabled]='logroSuccess'>Empezando con scrum
+        <p [attr.hidden]='logroSuccess'>Conseguido</p>
+    </li>
+    <li class="list-group-item" [ariaDisabled]='logroSuccess'>Mi formacion o equipo conformado.
+        <p [attr.hidden]='logroSuccess'>Conseguido</p>
+    </li>
+    <li class="list-group-item" [ariaDisabled]='logroSuccess'>Armonia dentro del equipo
+        <p [attr.hidden]='logroSuccess'>Conseguido</p>
+    </li>
+    <li class="list-group-item" [ariaDisabled]='logroSuccess'>Estratega
+        <p [attr.hidden]='logroSuccess'>Conseguido</p>
+    </li>
+    <li class="list-group-item" [ariaDisabled]='logroSuccess'>Scrummie guru
+        <p [attr.hidden]='logroSuccess'>Conseguido</p>
+    </li>
 </ul>
