--- a/src/app/learn/components/learn-view/learn-view.component.css
+++ b/src/app/learn/components/learn-view/learn-view.component.css
@@ -5,12 +5,48 @@
 
 }
 
+@keyframes fadeIn {
+    0% { opacity: 0; }
+    100% { opacity: 1; }
+  }
+
 .contenedor {
-    display: flex !important;
-    flex-direction: column !important;
-    align-items: center !important;
-    justify-content: flex-start !important;
-    /* align-self: center!important; */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    animation: fadeIn 0.5s;
+    /* min-height: 100vh; */
+}
+
+.content-carousel{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.pr{
+    position: relative;
+    z-index: 3;
+}
+
+
+.content-carousel#quiz{
+    display: flex;
+    flex-direction: column;
+    /* align-items: normal; */
+    justify-content: center;
+    /* min-height: 80vh; */
+}
+
+.carousel-control-next, .carousel-control-prev{
+    position: fixed;
+}
+
+#pruebaxd{
+    white-space: pre-wrap;
+    white-space: -moz-pre-wrap;
+    white-space: -o-pre-wrap;
 }
 
 
@@ -21,15 +57,9 @@
     margin-top: 8px;
 }
 
-.header-mods#headerCurso1{
-    /* margin-top: 50px; */
-    /* position: fixed; */
-}
-
-
 .header-mods {
     align-items: center;
-    background-color: #5ada6f!important;
+    background-color: #52a8b9;
     background-size: 700px 200px;
     color: black;
     -moz-column-gap: 16px;
@@ -67,39 +97,54 @@
     margin-top: 30px;
 }
 
-.sun#initialSun2{
-    margin-top: 40px;
+.pruebaaaaaaas{
+    margin-right: 50px;
 }
+
+.sun#curso0btnActivity0,.sun#curso1btnActivity0{
+    margin-top: 20px;
+}
+
+[popover] {
+    background: #222;
+    color: white;
+    font-family: Jost;
+    font-size: 1.2rem;
+    padding: 0.05rem 1.25rem;
+  }
 
 .sun{
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-bottom: 25px!important;
-    width: 8em;
-    height: 8em;
+    margin-bottom: 20px!important;
+    width: 5em;
+    height: 4.425em;
     background: rgb(0,30,36);
     background: linear-gradient(149deg, rgba(0,30,36,1) 21%, rgba(9,102,121,1) 62%, rgba(0,255,209,1) 100%);
-    border-radius: 50%;
-    box-shadow: inset 0px -10px 1px 1px rgba(0, 30, 36, 0.7), inset -2px -2px 3px rgba(255, 255, 253, 0.1), 2px 2px 10px rgba(255, 255, 255, 0.1);
+    border-radius: 50%/50%;
+    border: none;    
+    box-shadow: inset 0px -10px 0px rgba(0,30,36, 0.7), inset -2px -2px 3px rgba(255, 255, 253, 0.1), 2px 2px 10px rgba(255, 255, 255, 0.1);
+}
+
+.sun:active{
+    box-shadow: none;
+    transform: translateY(8px);
 }
 
 
 button.sun:disabled{
-    background: #808080!important;
-    box-shadow: inset 0px -10px 1px 1px rgba(69, 75, 77, 0.7), inset -2px -2px 3px rgba(255, 255, 253, 0.1), 2px 2px 10px rgba(255, 255, 255, 0.1);
+    background: #b4b4b4!important;
+    box-shadow: inset 0px -10px 0px rgba(69, 75, 77, 0.7), inset -2px -2px 3px rgba(255, 255, 253, 0.1), 2px 2px 10px rgba(255, 255, 255, 0.1);
     opacity: 0.4;
 }
 
-[aria-disabled="true"] {
-  opacity: 0.3;
+button.sun:disabled>i{
+    color: #727272;
 }
 
 .mod-icon{
     color: white;
-    font-size: 3em;
+    font-size: 1.5em;
 }
-button:disabled.mod-icon{
-    color: #ff0000;
-    font-size: 3em;
-}
+
